[tool.poetry]
name = "arbitrage-helper"
version = "0.1.0"
description = ""
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
readme = "README.md"
packages = [{include = "arbitrage_helper"}]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
requests = "^2.28.1"
python-decouple = "^3.6"
lxml = "^4.9.1"
wemake-python-styleguide = "^0.17.0"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

