[metadata]
description-file = README.md

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
count = true
# format = wemake
show-source = true
statistics = false
doctests = true
max-line-complexity = 80

ignore =
    ; Missing "Returns" in Docstring
    DAR201

per-file-ignores =
    arbitrage_helper/currency/*.py:
    ; Found upper-case constant in a class
    WPS115
